Refactor maven build and intellij test running, and performed Gemini 3.6 Flash Extended pass with Antigravity 2 (#43)
* Claude Code helped me navigate all of the difficulties in getting the testing working, and produced lots of (not added to the repository) helpful markdown documentation

* Modified EnumAndIdsOps with additional fromCacheOnly with two parameters, fixed a Javadoc typo, and added test coverage for new EnumAndIdsOps method

* Refactored to harden ForcedFatalThrowable, and expanded test coverage

* Refactored to harden Memoizer, and expanded tests

* Refactored to harden CollectionsOps, and expanded tests

* Found another errant instance needing to be corrected to  "Error-by-Returned-Value"

* Refactored to harden Either

* Refactored to harden SetsOps.SetPair

* Refactored to harden Enum*Ops.FormatBuilder with a FormatConfig

* Refactored to harden NonEmptyList, *Set, and *Map

* Refactored to harden NonEmpty* Int and String

* Refactored to reify the fatal throwable exceptions Set into WrappedCheckedException

* Refactored to harden Using* classes, and fill in the missing implementations

* Refactored to harden TryCatchesOps

* Refactored to harden CollectionsOps, MapsOps, and SetsOps, including updating testing coverage

* Refactored to harden ListsOps

* Refactored to modernize StringsOps, IntegersOps, EnumsOps, and EnumAndIdsOps

* Refactored to modernize ArraysOps, ObjectsOps, FunctionsOps, and FunctionsPrimitiveOps

* Transitioned compiler warning suppression from comment noinspection to class level @SuppressWarnings, and reverted some small changes

---------

Co-authored-by: Jim O'Flaherty <joflaherty@fetchpackage.com>